fix overflow(because of tabs)

--- a/src/modules/pages/NewApiPage/NewApiForm.scss
+++ b/src/modules/pages/NewApiPage/NewApiForm.scss
@@ -11,6 +11,10 @@ $radio-width: 125px;
         border-radius: $hf-border-radius;
         background-color: $hf-color-white;
 
+        &--overflowed {
+            overflow: hidden;
+        }
+
         & + .j-api-form__inner {
             margin-top: $hf-padding-big;
         }
